-- =========================================================
-- SESVIA - MASTER SQL
-- =========================================================
-- Este script define la estructura base de la base de datos
-- del proyecto SESVIA a partir de la versión actual validada.
--
-- Criterios generales de diseño:
-- - Los nombres técnicos de tablas, columnas y constraints se
--   mantienen en inglés por coherencia con la práctica habitual
--   en desarrollo, backend, API y documentación técnica.
-- - La explicación funcional y académica del proyecto se hará
--   en español, pero los identificadores del código se conservan
--   en inglés para evitar mezclas poco consistentes.
-- - Las reglas simples sobre una sola tabla se resuelven mediante
--   claves primarias, claves foráneas, UNIQUE y CHECK.
-- - Las reglas de coherencia entre varias tablas se refuerzan
--   posteriormente mediante funciones y triggers.
-- - La secuencia del proceso de negocio (por ejemplo, generar una
--   factura tras un pago confirmado) se controlará principalmente
--   desde el backend.
--
-- Este archivo busca ser legible, defendible y fácil de mantener.
-- =========================================================


-- =========================================================
-- 1. ESQUEMA
-- =========================================================

CREATE SCHEMA IF NOT EXISTS sesvia AUTHORIZATION sesvia_admin;

-- Nota:
-- Si la base de datos utiliza UUID públicos para no exponer IDs
-- internos de forma directa, PostgreSQL necesita una función para
-- generarlos. En muchos entornos actuales se usa gen_random_uuid().
-- Si ya está disponible, esta línea no causará problemas.
CREATE EXTENSION IF NOT EXISTS pgcrypto;


-- =========================================================
-- 2. TABLAS BASE DE IDENTIDAD Y ACCESO
-- =========================================================

-- ---------------------------------------------------------
-- 2.1 ROLES
-- ---------------------------------------------------------
-- Almacena los roles posibles dentro del sistema.
-- Se separan de los usuarios para permitir cuentas con uno
-- o varios roles sin duplicar registros personales.
CREATE TABLE sesvia.roles (
    role_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    role_name varchar(50) NOT NULL,
    description varchar(255),
    active bool NOT NULL DEFAULT true,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uq_roles_name UNIQUE (role_name)
);


-- ---------------------------------------------------------
-- 2.2 USERS
-- ---------------------------------------------------------
-- Tabla base de usuarios del sistema.
-- Aquí se almacena la identidad general de cualquier cuenta,
-- independientemente de que actúe como cliente, profesional
-- o ambos.
CREATE TABLE sesvia.users (
    user_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    public_uuid uuid NOT NULL DEFAULT gen_random_uuid(),
    username varchar(50) NOT NULL,
    first_name varchar(100) NOT NULL,
    last_name_1 varchar(100) NOT NULL,
    last_name_2 varchar(100),
    email varchar(255) NOT NULL,
    avatar_url varchar(255),
    lang_pref varchar(10) NOT NULL,
    active bool NOT NULL DEFAULT true,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uq_users_email UNIQUE (email),
    CONSTRAINT uq_users_public_uuid UNIQUE (public_uuid),
    CONSTRAINT uq_users_username UNIQUE (username)
);


-- ---------------------------------------------------------
-- 2.3 AUTH_ACCOUNTS
-- ---------------------------------------------------------
-- Separa la identidad del usuario de sus métodos de acceso.
-- Esto permite que una misma cuenta pueda iniciar sesión con
-- más de un proveedor (por ejemplo, local o Google) sin crear
-- usuarios duplicados.
CREATE TABLE sesvia.auth_accounts (
    auth_account_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id int4 NOT NULL,
    provider varchar(30) NOT NULL,
    provider_user_id varchar(255),
    email_login varchar(255),
    password_hash varchar(255),
    active bool NOT NULL DEFAULT true,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT chk_auth_accounts_provider
        CHECK (provider IN ('local', 'google')),

    CONSTRAINT uq_auth_accounts_provider_user
        UNIQUE (provider, provider_user_id),

    CONSTRAINT uq_auth_accounts_user_provider
        UNIQUE (user_id, provider),

    CONSTRAINT fk_auth_accounts_user
        FOREIGN KEY (user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE
);


-- ---------------------------------------------------------
-- 2.4 USER_ROLES
-- ---------------------------------------------------------
-- Relación N:M entre usuarios y roles.
-- Permite que un mismo usuario pueda actuar como cliente y
-- profesional con una sola cuenta, cambiando de contexto en
-- la aplicación sin necesidad de duplicar identidad.
CREATE TABLE sesvia.user_roles (
    user_id int4 NOT NULL,
    role_id int4 NOT NULL,
    assigned_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    active bool NOT NULL DEFAULT true,

    CONSTRAINT pk_user_roles PRIMARY KEY (user_id, role_id),

    CONSTRAINT fk_user_roles_user
        FOREIGN KEY (user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_user_roles_role
        FOREIGN KEY (role_id)
        REFERENCES sesvia.roles(role_id)
        ON DELETE RESTRICT
);


-- =========================================================
-- 3. PERFIL PROFESIONAL Y DATOS FISCALES
-- =========================================================

-- ---------------------------------------------------------
-- 3.1 PRO_PROFILES
-- ---------------------------------------------------------
-- Un profesional no se modela como una persona separada, sino
-- como un usuario con rol profesional y un perfil profesional
-- asociado. Esta separación permite distinguir entre:
-- - datos generales de cuenta
-- - datos públicos visibles para clientes
-- - estado interno del perfil profesional
CREATE TABLE sesvia.pro_profiles (
    pro_profile_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id int4 NOT NULL,
    display_name varchar(150) NOT NULL,
    bio text,
    phone_contact varchar(30),
    location_text varchar(150),
    visible bool NOT NULL DEFAULT true,
    verified bool NOT NULL DEFAULT false,
    status varchar(30) NOT NULL DEFAULT 'draft',
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uq_pro_profiles_user UNIQUE (user_id),

    CONSTRAINT chk_pro_profiles_status
        CHECK (status IN ('draft', 'pending_review', 'active', 'suspended')),

    CONSTRAINT fk_pro_profiles_user
        FOREIGN KEY (user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE
);


-- ---------------------------------------------------------
-- 3.2 BILLING_DETAILS
-- ---------------------------------------------------------
-- Almacena datos fiscales y de facturación de forma separada.
-- Se mantiene fuera de pro_profiles porque no forma parte del
-- perfil público. Además, esta tabla puede servir tanto para
-- clientes como para profesionales cuando sea necesario emitir
-- facturas con datos completos.
CREATE TABLE sesvia.billing_details (
    billing_detail_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id int4 NOT NULL,
    legal_name varchar(150) NOT NULL,
    tax_id varchar(30) NOT NULL,
    address_line_1 varchar(150) NOT NULL,
    address_line_2 varchar(150),
    city varchar(100) NOT NULL,
    region varchar(100),
    postal_code varchar(20) NOT NULL,
    country_code varchar(10) NOT NULL,
    is_default bool NOT NULL DEFAULT true,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_billing_details_user
        FOREIGN KEY (user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE
);

-- =========================================================
-- 4. CONFIGURACIÓN PROFESIONAL, SERVICIOS Y AGENDA
-- =========================================================

-- ---------------------------------------------------------
-- 4.1 SCHEDULES
-- ---------------------------------------------------------
-- Define la disponibilidad semanal recurrente del profesional.
-- No almacena reservas reales, sino franjas base sobre las que
-- luego se calculan los huecos reservables.
CREATE TABLE sesvia.schedules (
    schedule_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pro_profile_id int4 NOT NULL,
    weekday int2 NOT NULL,
    start_time time NOT NULL,
    end_time time NOT NULL,
    slot_duration_min int4,
    active bool NOT NULL DEFAULT true,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT chk_schedules_weekday
        CHECK (weekday BETWEEN 1 AND 7),

    CONSTRAINT chk_schedules_time_range
        CHECK (start_time < end_time),

    CONSTRAINT fk_schedules_pro_profile
        FOREIGN KEY (pro_profile_id)
        REFERENCES sesvia.pro_profiles(pro_profile_id)
        ON DELETE CASCADE
);


-- ---------------------------------------------------------
-- 4.2 SERVICES
-- ---------------------------------------------------------
-- Define los servicios que ofrece cada perfil profesional.
-- Se guarda su duración, precio base y tratamiento fiscal.
-- Los campos de IVA permiten reflejar tanto servicios exentos
-- como servicios sujetos a gravamen.
CREATE TABLE sesvia.services (
    service_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pro_profile_id int4 NOT NULL,
    service_name varchar(150) NOT NULL,
    description text,
    duration_min int4 NOT NULL,
    base_price numeric(10,2) NOT NULL,
    currency_code varchar(10) NOT NULL DEFAULT 'EUR',
    active bool NOT NULL DEFAULT true,
    tax_rate numeric(5,2) NOT NULL DEFAULT 0,
    tax_exempt bool NOT NULL DEFAULT true,
    tax_exempt_reason varchar(150),
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uq_services_pro_profile_name
        UNIQUE (pro_profile_id, service_name),

    CONSTRAINT chk_services_tax_rate
        CHECK (tax_rate >= 0 AND tax_rate <= 100),

    CONSTRAINT chk_services_tax_exempt_logic
        CHECK (
            (tax_exempt = true AND tax_rate = 0)
            OR
            (tax_exempt = false AND tax_rate >= 0)
        ),

    CONSTRAINT fk_services_pro_profile
        FOREIGN KEY (pro_profile_id)
        REFERENCES sesvia.pro_profiles(pro_profile_id)
        ON DELETE CASCADE
);


-- ---------------------------------------------------------
-- 4.3 BOOKINGS
-- ---------------------------------------------------------
-- Representa cada reserva real realizada por un cliente.
-- Aquí sí se almacena una cita concreta, con fecha/hora de inicio
-- y fin, precio aplicado y estado actual.
--
-- Nota importante:
-- una reserva guarda tanto el pro_profile_id como el service_id.
-- Esto facilita consultas y filtros, pero obliga a comprobar que
-- el servicio elegido pertenece realmente al profesional indicado.
-- Esa coherencia se refuerza más adelante mediante un trigger.
CREATE TABLE sesvia.bookings (
    booking_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    client_user_id int4 NOT NULL,
    pro_profile_id int4 NOT NULL,
    service_id int4 NOT NULL,
    booking_start timestamptz NOT NULL,
    booking_end timestamptz NOT NULL,
    price_total numeric(10,2) NOT NULL,
    currency_code varchar(10) NOT NULL DEFAULT 'EUR',
    status varchar(30) NOT NULL DEFAULT 'pending',
    notes text,
    payment_deadline timestamptz NOT NULL,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT chk_bookings_status
        CHECK (status IN ('pending', 'confirmed', 'cancelled', 'completed')),

    CONSTRAINT chk_bookings_time_range
        CHECK (booking_start < booking_end),

    CONSTRAINT fk_bookings_client_user
        FOREIGN KEY (client_user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_bookings_pro_profile
        FOREIGN KEY (pro_profile_id)
        REFERENCES sesvia.pro_profiles(pro_profile_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_bookings_service
        FOREIGN KEY (service_id)
        REFERENCES sesvia.services(service_id)
        ON DELETE RESTRICT
);


-- ---------------------------------------------------------
-- 4.4 BOOKING_HISTORY
-- ---------------------------------------------------------
-- Permite conservar un historial básico de cambios de estado en
-- las reservas. Esto mejora la trazabilidad sin sobrecargar la
-- tabla principal de bookings.
CREATE TABLE sesvia.booking_history (
    booking_history_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    booking_id int4 NOT NULL,
    status varchar(30) NOT NULL,
    change_note text,
    changed_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT chk_booking_history_status
        CHECK (status IN ('pending', 'confirmed', 'cancelled', 'completed')),

    CONSTRAINT fk_booking_history_booking
        FOREIGN KEY (booking_id)
        REFERENCES sesvia.bookings(booking_id)
        ON DELETE CASCADE
);


-- =========================================================
-- 5. SOPORTE Y MENSAJERÍA
-- =========================================================

-- ---------------------------------------------------------
-- 5.1 SUPPORT_TICKETS
-- ---------------------------------------------------------
-- Almacena incidencias o solicitudes de soporte abiertas por
-- usuarios del sistema.
CREATE TABLE sesvia.support_tickets (
    ticket_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id int4 NOT NULL,
    subject varchar(255) NOT NULL,
    description text NOT NULL,
    status varchar(30) NOT NULL DEFAULT 'open',
    active bool NOT NULL DEFAULT true,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_support_tickets_user
        FOREIGN KEY (user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE
);


-- ---------------------------------------------------------
-- 5.2 THREADS
-- ---------------------------------------------------------
-- Agrupa conversaciones entre cliente y profesional.
-- Puede estar vinculado opcionalmente a una reserva concreta.
CREATE TABLE sesvia.threads (
    thread_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id int4 NOT NULL,
    pro_id int4 NOT NULL,
    booking_id int4,
    subject varchar(255),
    status varchar(30) NOT NULL DEFAULT 'open',
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_threads_user
        FOREIGN KEY (user_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_threads_pro
        FOREIGN KEY (pro_id)
        REFERENCES sesvia.pro_profiles(pro_profile_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_threads_booking
        FOREIGN KEY (booking_id)
        REFERENCES sesvia.bookings(booking_id)
        ON DELETE SET NULL
);


-- ---------------------------------------------------------
-- 5.3 MESSAGES
-- ---------------------------------------------------------
-- Mensajes individuales dentro de cada hilo de conversación.
CREATE TABLE sesvia.messages (
    message_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    thread_id int4 NOT NULL,
    sender_id int4 NOT NULL,
    body text NOT NULL,
    sent_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    read_at timestamptz,
    active bool NOT NULL DEFAULT true,

    CONSTRAINT fk_messages_thread
        FOREIGN KEY (thread_id)
        REFERENCES sesvia.threads(thread_id)
        ON DELETE CASCADE,

    CONSTRAINT fk_messages_sender
        FOREIGN KEY (sender_id)
        REFERENCES sesvia.users(user_id)
        ON DELETE CASCADE
);

-- =========================================================
-- 6. FACTURACIÓN Y PAGOS
-- =========================================================

-- ---------------------------------------------------------
-- 6.1 INVOICES
-- ---------------------------------------------------------
-- Almacena las facturas generadas por el sistema.
--
-- Decisiones importantes de diseño:
-- - La factura se guarda como entidad propia porque forma parte
--   del apoyo contable al profesional.
-- - Puede existir más de una factura asociada a una misma reserva
--   si se producen correcciones, reversiones o sustituciones.
-- - Se distingue entre factura simplificada y factura completa.
-- - Las facturas emitidas no deben modificarse libremente: cuando
--   sea necesario corregirlas, se utilizará la lógica de reversión
--   y sustitución.
CREATE TABLE sesvia.invoices (
    invoice_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    booking_id int4 NOT NULL,
    billing_detail_id int4,
    invoice_number varchar(50) NOT NULL,
    invoice_series varchar(20),
    invoice_type varchar(20) NOT NULL DEFAULT 'simplified',
    issued_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    recipient_name varchar(150),
    recipient_tax_id varchar(30),
    recipient_address text,

    subtotal_amount numeric(10,2) NOT NULL,
    tax_amount numeric(10,2) NOT NULL DEFAULT 0,
    total_amount numeric(10,2) NOT NULL,
    currency_code varchar(10) NOT NULL DEFAULT 'EUR',

    status varchar(20) NOT NULL DEFAULT 'issued',

    is_reversal bool NOT NULL DEFAULT false,
    reverses_invoice_id int4,
    replaces_invoice_id int4,
    correction_reason text,

    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uq_invoices_number_series
        UNIQUE (invoice_series, invoice_number),

    CONSTRAINT chk_invoices_type
        CHECK (invoice_type IN ('simplified', 'full')),

    CONSTRAINT chk_invoices_status
        CHECK (status IN ('issued', 'reversed', 'cancelled')),

    CONSTRAINT chk_invoice_total_match
        CHECK (total_amount = subtotal_amount + tax_amount),

    CONSTRAINT chk_invoice_full
        CHECK (
            invoice_type <> 'full'
            OR (
                recipient_name IS NOT NULL
                AND recipient_tax_id IS NOT NULL
                AND recipient_address IS NOT NULL
            )
        ),

    CONSTRAINT chk_invoice_simple
        CHECK (
            invoice_type <> 'simplified'
            OR ABS(total_amount) <= 400.00
        ),

    CONSTRAINT chk_invoice_reversal
        CHECK (
            (is_reversal = true AND total_amount <= 0)
            OR
            (is_reversal = false AND total_amount >= 0)
        ),

    CONSTRAINT chk_invoices_correction_flow
        CHECK (
            (is_reversal = false AND reverses_invoice_id IS NULL)
            OR
            (is_reversal = true AND reverses_invoice_id IS NOT NULL)
        ),

    CONSTRAINT fk_invoices_booking
        FOREIGN KEY (booking_id)
        REFERENCES sesvia.bookings(booking_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_invoices_billing_detail
        FOREIGN KEY (billing_detail_id)
        REFERENCES sesvia.billing_details(billing_detail_id)
        ON DELETE SET NULL,

    CONSTRAINT fk_invoices_reverses_invoice
        FOREIGN KEY (reverses_invoice_id)
        REFERENCES sesvia.invoices(invoice_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_invoices_replaces_invoice
        FOREIGN KEY (replaces_invoice_id)
        REFERENCES sesvia.invoices(invoice_id)
        ON DELETE RESTRICT
);


-- ---------------------------------------------------------
-- 6.2 PAYMENTS
-- ---------------------------------------------------------
-- Registra los pagos asociados a reservas.
--
-- Decisiones importantes de diseño:
-- - El importe del pago se mantiene no negativo.
-- - Las devoluciones o incidencias de cobro se reflejan mediante
--   el estado del pago y, en el plano contable, mediante la lógica
--   de facturas de reversión cuando corresponda.
-- - El receipt_number se guarda aquí porque el justificante de pago
--   pertenece al evento de pago, no a la reserva ni a la factura.
CREATE TABLE sesvia.payments (
    payment_id int4 GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    booking_id int4 NOT NULL,
    invoice_id int4,
    amount numeric(10,2) NOT NULL,
    currency_code varchar(10) NOT NULL DEFAULT 'EUR',
    payment_method varchar(30) NOT NULL,
    status varchar(30) NOT NULL DEFAULT 'pending',
    paid_at timestamptz,
    transaction_ref varchar(100),
    receipt_number varchar(50),
    receipt_issued_at timestamptz,
    created_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uq_payments_receipt
        UNIQUE (receipt_number),

    CONSTRAINT chk_payments_amount
        CHECK (amount >= 0),

    CONSTRAINT chk_payments_method
        CHECK (payment_method IN ('paypal', 'stripe')),

    CONSTRAINT chk_payments_status
        CHECK (status IN ('pending', 'paid', 'failed', 'refunded', 'cancelled')),

    CONSTRAINT fk_payments_booking
        FOREIGN KEY (booking_id)
        REFERENCES sesvia.bookings(booking_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_payments_invoice
        FOREIGN KEY (invoice_id)
        REFERENCES sesvia.invoices(invoice_id)
        ON DELETE SET NULL
);


-- =========================================================
-- 7. FUNCIONES Y TRIGGERS DE COHERENCIA
-- =========================================================

-- ---------------------------------------------------------
-- 7.1 FUNCIÓN: BOOKING / SERVICE / PRO PROFILE
-- ---------------------------------------------------------
-- Una reserva no puede utilizar un servicio que pertenezca a un
-- perfil profesional distinto del indicado en la propia reserva.
-- Esta regla se refuerza mediante un trigger para evitar
-- incoherencias entre la reserva, el profesional y el servicio.
CREATE OR REPLACE FUNCTION sesvia.fn_check_booking_service_owner()
RETURNS trigger
LANGUAGE plpgsql
AS $$
DECLARE
    v_service_pro_profile_id int4;
BEGIN
    SELECT pro_profile_id
    INTO v_service_pro_profile_id
    FROM sesvia.services
    WHERE service_id = NEW.service_id;

    IF v_service_pro_profile_id IS NULL THEN
        RAISE EXCEPTION 'The selected service does not exist.';
    END IF;

    IF NEW.pro_profile_id <> v_service_pro_profile_id THEN
        RAISE EXCEPTION 'The selected service does not belong to the selected professional profile.';
    END IF;

    RETURN NEW;
END;
$$;


-- ---------------------------------------------------------
-- 7.2 FUNCIÓN: PAYMENT / INVOICE / BOOKING
-- ---------------------------------------------------------
-- Un pago no puede vincularse a una factura asociada a una reserva
-- distinta. Esta regla se refuerza mediante un trigger para
-- mantener la coherencia entre pago, factura y reserva.
CREATE OR REPLACE FUNCTION sesvia.fn_check_payment_invoice_booking()
RETURNS trigger
LANGUAGE plpgsql
AS $$
DECLARE
    v_invoice_booking_id int4;
BEGIN
    IF NEW.invoice_id IS NOT NULL THEN
        SELECT booking_id
        INTO v_invoice_booking_id
        FROM sesvia.invoices
        WHERE invoice_id = NEW.invoice_id;

        IF v_invoice_booking_id IS NULL THEN
            RAISE EXCEPTION 'The selected invoice does not exist.';
        END IF;

        IF NEW.booking_id <> v_invoice_booking_id THEN
            RAISE EXCEPTION 'The selected invoice does not belong to the same booking as the payment.';
        END IF;
    END IF;

    RETURN NEW;
END;
$$;


-- ---------------------------------------------------------
-- 7.3 TRIGGERS
-- ---------------------------------------------------------
CREATE TRIGGER trg_booking_service_owner
BEFORE INSERT OR UPDATE OF pro_profile_id, service_id
ON sesvia.bookings
FOR EACH ROW
EXECUTE FUNCTION sesvia.fn_check_booking_service_owner();

CREATE TRIGGER trg_payment_invoice_booking
BEFORE INSERT OR UPDATE OF booking_id, invoice_id
ON sesvia.payments
FOR EACH ROW
EXECUTE FUNCTION sesvia.fn_check_payment_invoice_booking();


-- =========================================================
-- 8. DATOS INICIALES RECOMENDADOS
-- =========================================================
-- Estos roles básicos permiten que la aplicación funcione con
-- la lógica prevista desde el inicio.
INSERT INTO sesvia.roles (role_name, description)
VALUES
    ('client', 'Usuario que reserva y gestiona sus citas'),
    ('professional', 'Usuario que ofrece servicios y gestiona agenda'),
    ('admin', 'Usuario con funciones de supervisión y soporte')
ON CONFLICT (role_name) DO NOTHING;