erDiagram

    USERS {
        int user_id PK
        uuid public_uuid
        string username
        string email
        string lang_pref
        boolean active
    }

    AUTH_ACCOUNTS {
        int auth_account_id PK
        int user_id FK
        string provider
        string email_login
        string password_hash
        boolean active
    }

    ROLES {
        int role_id PK
        string role_name
        boolean active
    }

    USER_ROLES {
        int user_id FK
        int role_id FK
        datetime assigned_at
        boolean active
    }

    PRO_PROFILES {
        int pro_profile_id PK
        int user_id FK
        string display_name
        string location_text
        boolean visible
        boolean verified
        string status
    }

    SERVICES {
        int service_id PK
        int pro_profile_id FK
        string service_name
        int duration_min
        decimal base_price
        boolean active
    }

    SCHEDULES {
        int schedule_id PK
        int pro_profile_id FK
        int weekday
        time start_time
        time end_time
        int slot_duration_min
        boolean active
    }

    BOOKINGS {
        int booking_id PK
        int client_user_id FK
        int pro_profile_id FK
        int service_id FK
        datetime booking_start
        datetime booking_end
        decimal price_total
        string status
    }

    BOOKING_HISTORY {
        int booking_history_id PK
        int booking_id FK
        string status
        string note
        datetime changed_at
    }

    USERS ||--o{ AUTH_ACCOUNTS : authenticates_with
    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : assigned
    USERS ||--o| PRO_PROFILES : may_have
    PRO_PROFILES ||--o{ SERVICES : offers
    PRO_PROFILES ||--o{ SCHEDULES : defines
    USERS ||--o{ BOOKINGS : makes
    PRO_PROFILES ||--o{ BOOKINGS : receives
    SERVICES ||--o{ BOOKINGS : selected_in
    BOOKINGS ||--o{ BOOKING_HISTORY : tracks
